check should pass